# sftp_dev_uploader

./: .gitignore  Cargo.toml  README.md  TODO.md  bonnie.toml  docker-compose.yaml  rust-toolchain.toml
.github/workflows/: release.yml
docker/: .gitignore  README.md
docker/volumes/sftpgo_data_root/data/test/: initial_testfile.txt
playground/: .gitignore
profiling/: README.md
src/: main.rs
src/cli/: mod.rs  upload_pair.rs
src/sftp/: local_utils.rs  local_utils_test.rs  mod.rs  sftp_client.rs  sftp_client_advanced_tests.rs  sftp_client_standard_tests.rs
src/sftp/snapshots/: dev_uploader__sftp__sftp_client_standard_tests__sftp_lls.snap  dev_uploader__sftp__sftp_client_standard_tests__sftp_ls.snap  sftp_dev_uploader_rust__sftp__sftp_client_tests__sftp_lls.snap  sftp_dev_uploader_rust__sftp__sftp_client_tests__sftp_ls.snap  sftp_dev_uploader_rust__sftp__ssh2_client_tests__sftp_lls.snap  sftp_dev_uploader_rust__sftp__ssh2_client_tests__sftp_ls.snap
src/uploader/: mod.rs  progress_actor.rs  progress_actor_handle.rs  upload_actor.rs  upload_actor_handle.rs
src/utils/: mod.rs
src/watcher/: mod.rs  watch_actor.rs  watch_actor_handle.rs
testfiles/: upload_file_explicit_remote.md  upload_file_implicit_remote.md
testfiles/relative_dir/: upload_file_implicit_remote.md
