[package]
    name        = "sftp_dev_uploader_rust"
    version     = "1.1.2"
    edition     = "2021"
    authors     = ["Benjamin Jesuiter <bjesuiter@codemonument.com>"]
    description = "A dev-uploader which watches folders and uploads changed files to a remote server via SFTP."
    license     = "MIT"

[[bin]]
    name = "dev_uploader"
    path = "src/main.rs"

[profile.profiling]
    inherits = "release"
    debug    = true

[target.aarch64-apple-darwin]
    rustflags = ["-C", "link-arg=-Wl,-dead_strip", "-C", "prefer-dynamic=yes"]

[target.x86_64-unknown-linux-gnu]
    # Remove static linking as it conflicts with OpenSSL
    # Note: static linking works on ubuntu-24.04, but not on ubuntu-22.04
    # rustflags = ["-C", "link-arg=-static"]
    rustflags = []

[target.x86_64-unknown-linux-musl]
    linker = "rust-lld"
    # This enables static linking of the C runtime library
    rustflags = ["-C", "target-feature=+crt-static"]


[dependencies]
    clap              = { version = "4.5.20", features = ["derive", "cargo"] }
    tokio             = { version = "1", features = ["full"] }
    miette            = "7.2.0"
    watchexec         = "4.1.0"
    watchexec-signals = "3.0.0"

    watchexec-filterer-tagged  = "2.0.0"
    chrono                     = "0.4.38"
    watchexec-filterer-globset = "4.0.1"
    watchexec-events           = "3.0.0"
    indicatif                  = "0.17.8"
    ssh2                       = { version = "0.9.4", features = ["vendored-openssl"] }
    insta                      = "1.40.0"
    once_cell                  = "1.20.2"
    static_init                = "1.0.3"
    rand                       = "0.8.5"
    oneshot                    = "0.1.8"
    walkdir                    = "2.5.0"
