[package]
    name        = "sftp_dev_uploader_rust"
    version     = "1.1.5"
    edition     = "2021"
    authors     = ["Benjamin Jesuiter <bjesuiter@codemonument.com>"]
    description = "A dev-uploader which watches folders and uploads changed files to a remote server via SFTP."
    license     = "MIT"

[[bin]]
    name = "dev_uploader"
    path = "src/main.rs"

[profile.profiling]
    inherits = "release"
    debug    = true

[target.aarch64-apple-darwin]
    rustflags = ["-C", "link-arg=-Wl,-dead_strip", "-C", "prefer-dynamic=yes"]

[target.x86_64-unknown-linux-gnu]
    # Remove static linking as it conflicts with OpenSSL
    # Note: static linking works on ubuntu-24.04, but not on ubuntu-22.04
    # rustflags = ["-C", "link-arg=-static"]
    rustflags = []

[target.x86_64-unknown-linux-musl]
    linker = "rust-lld"
    # This enables static linking of the C runtime library
    rustflags = ["-C", "target-feature=+crt-static"]


[dependencies]
    clap                       = { version = "4.5.51", features = ["derive", "cargo"] }
    tokio                      = { version = "1", features = ["full"] }
    miette                     = "7.6.0"
    watchexec                  = "8.0.1"
    watchexec-signals          = "5.0.0"
    chrono                     = "0.4.42"
    watchexec-filterer-globset = "8.0.0"
    watchexec-events           = "6.0.0"
    indicatif                  = "0.18.2"
    insta                      = "1.43.2"
    once_cell                  = "1.21.3"
    static_init                = "1.0.4"
    rand                       = "0.9.2"
    oneshot                    = "0.1.11"
    walkdir                    = "2.5.0"
    home                       = "0.5.11"

[target.'cfg(all(target_os = "linux", target_env = "gnu"))'.dependencies]
    # Use system OpenSSL on Linux => avoids problems with static linking when building on ubuntu-22.04
    ssh2 = { version = "0.9.4" }

[target.'cfg(not(target_os = "linux"))'.dependencies]
    ssh2 = { version = "0.9.4", features = [
        "vendored-openssl",
    ] } # Use vendored OpenSSL everywhere else
